--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ README.md filter=lfs diff=lfs merge=lfs -text
 README.txt filter=lfs diff=lfs merge=lfs -text
 run.bat filter=lfs diff=lfs merge=lfs -text
 WebScanner.jar filter=lfs diff=lfs merge=lfs -text
+core/jre/bin/jfxwebkit.dll filter=lfs diff=lfs merge=lfs -text
